# tatou

./: .gitignore  README.md  docker-compose.yml  openapi.yaml  sample.env
configs/: logging.json
docs/: README.md  asset_dependencies.dot  final_specialisation_report.md  incident_response.md  incident_response_checklist.md  inventory.md  logging-guide.md  monitoring_guide.md  network_architecture.md  operational_security_checklist.md  project_status.md  security_event_categories.md  security_incident_report_template.md  system_architecture.dot  threat_model.md
docs/attack_trees/: api_attack_tree.dot  auth_bypass_sequence.txt  file_upload_attack_tree.dot  file_upload_sequence.txt
monitoring/: README.md  prometheus.yml
monitoring/detection_rules/: api_security_rules.yaml  file_upload_rules.yaml
monitoring/prometheus_rules/: security_alerts.yml
server/: Dockerfile  pyproject.toml
server/src/: combo_method.py  logger.py  meta_svd_watermark.py  metrics.py  phantom_annotation_watermark.py  server.py  unsafe_bash_bridge_append_eof.py  watermarking_method.py  watermarking_utils.py
server/test/: RMAP_Fuzzing_Non-Regression_Tests.py  test_api.py  test_api_extend.py  test_meta_svd.py  test_rmap.py  test_server.py  test_watermarking_all_methods.py  test_watermarking_cli.py  test_watermarking_utils.py
tools/: requirements-optional.txt
tools/incident_response/: generate_test_events.py  incident_drill.py  quick_response_checklist.sh  security_diagnosis.py
tools/scripts/: analyze_dependencies.py  final_validation.py  generate_security_events.py  test_metrics.py  (+2 more)
(+6 files in other folders)
